src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-dwU-b-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault column width: U\nborder on\ntabbed"
expression: snapshot
---
initial configure:
size: 1231 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 1231 × 680, bounds: 1231 × 680, states: [Activated]
